syntax="proto3";

package pb;

import "rpc_user.proto";

option go_package = "github.com/claytten/golang-simplebank/pb";

service Simplebank {
  // users
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
  rpc RenewToken(RenewTokenRequest) returns (RenewTokenResponse) {}
}